--- a/.github/workflows/master_automatischerbildzuschneider.yml
+++ b/.github/workflows/master_automatischerbildzuschneider.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy dotnet core project to Azure Function App - AutomatischerBildZuschneider
+name: Build and deploy dotnet core app to Azure Function App - AutomatischerBildZuschneider
 
 on:
   push:
@@ -15,11 +15,8 @@ env:
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    runs-on: windows-latest
+    
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
@@ -30,19 +27,12 @@ jobs:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
       - name: 'Resolve Project Dependencies Using Dotnet'
-        shell: bash
+        shell: pwsh
         run: |
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           dotnet build --configuration Release --output ./output
           popd
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_FF5F2B5F41F7427FA1D371CB8C378579 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_07F173E3F4984C8181DD0FDE97701633 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_CDDF58956C0147CEB8A3B97CDA47541D }}
-
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
@@ -50,4 +40,4 @@ jobs:
           app-name: 'AutomatischerBildZuschneider'
           slot-name: 'Production'
           package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_AD93083A83B4464DAF58E9B5082DC9F6 }}
